samples/_failures_safe/1761247048_2124bb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_844be1f7.c: In function ‘main’:
./samples/SAFE/__tmp_844be1f7.c:198:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  198 |     int token_count
      |     ^~~
./samples/SAFE/__tmp_844be1f7.c:198:5: error: expected declaration or statement at end of input
